added changes on moods project

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>moods</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>This is not a drill</h1>
+    <section id="container">
+        <h1>Moods of micucu*</h1>
+        <img src="moodsimg/m7.png">
 
-    <script src="app.js"></script>
+        <button>Change mood</button>
+        <p>*no micuci were harmed in the making of this website</p>
+    </section>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
