--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <section id="container">
-        <h1>Moods of micucu*</h1>
+        <h1>Moods of micucu</h1>
         <img src="moodsimg/m7.png">
 
         <button>Change mood</button>
