--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width",
+    initial-scale="1.0">
     <title>moods</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
